# ROM-Plumes-Experiments

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.CFF  NEW_bad_seed_example.ipynb  README.md  bad_seed_example.ipynb  bad_seed_ode_test.m  composite_plot.py  example_run.py  figures.ipynb  learn_ode.py  mitosis_example.py  post_utils.py  pyproject.toml  run_exps  simple_example.py  sindy_pipeline.py  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_500150.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_5229b7.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_7b194d.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_b4aa4a.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_beade7.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_c27829.html  trials.db  trials_plumex.simple_example.db
.github/workflows/: main.yml
exp-1/: trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_7d82a0.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_b7b632.html  trials.db
plumex/: __main__.py  _data.py  choose_center.py  config.py  data.py  hankel_pipeline.py  plotting.py  regress_edge.py  regression_pipeline.py  simple_example.py  sindy_pipeline.py  types.py  video_digest.py
plumex/exp_1/: trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_077b64.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_0c30b0.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_119bad.html  trial_sindy-pipeline_ensem_alpha-ensem_max_iter-ensem_num_models-ensem_thresh-ensem_time_points-poly_degree-bad_seed-july_20_low_1-window_length_0_2bb144.html  (+4 more)
plumex/good_seed_exp/: arg59a507180.pickle  results_d0ee2a.npy
plumex/post/: __init__.py  agu.py  (+8 more)
pysindy_plume_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+6 files in other folders)
