[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysindy-plume-experiments"
dynamic = ["version"]
dependencies = [
  "mitosis>=0.5.2",
  "pysindy[cvxpy] @ git+https://github.com/dynamicslab/pysindy",
  "matplotlib",
  "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments",
  "ara_plumes @ git+https://github.com/Jacob-Stevens-Haas/ARA-Plumes",
]

[tool.setuptools]
packages=["plumex"]

[tool.setuptools_scm]

[tool.mitosis.steps]
data = ["plumex.data:load_pickle", "plumex.config:data_lookup"]
sindy_fe = ["plumex.sindy_pipeline:run", "plumex.config:sindy_lookup"]
hankel_fe = ["plumex.hankel_pipeline:run", "plumex.config:hankel_lookup"]
