[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysindy-plume-experiments"
dynamic = ["version"]
dependencies = [
  "mitosis>=0.5.2",
  "pysindy[cvxpy] @ git+https://github.com/dynamicslab/pysindy@a43e217",
  "matplotlib",
  "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments@cbaa059",
  "ara_plumes @ git+https://github.com/Jacob-Stevens-Haas/ARA-Plumes@0.1.0",
]

[tool.setuptools]
packages=["plumex"]

[tool.setuptools_scm]

[tool.mitosis.steps]
data = ["plumex.data:load_pickle", "plumex.config:data_lookup"]
gen_center = ["plumex.video_digest:create_centerline", "plumex.config:data_lookup"]
sindy_fe = ["plumex.sindy_pipeline:run", "plumex.config:sindy_lookup"]
hankel_fe = ["plumex.hankel_pipeline:run", "plumex.config:hankel_lookup"]
