[build-system]
requires = ["setuptools>=62", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysindy-plume-experiments"
dynamic = ["version"]
dependencies = [
  "mitosis>=0.5.2",
  "pysindy[cvxpy] @ git+https://github.com/dynamicslab/pysindy@a43e217",
  "matplotlib",
  "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments@cbaa059",
  "ara_plumes @ git+https://github.com/Jacob-Stevens-Haas/ARA-Plumes@0.2.0",
]

[tool.setuptools]
packages=["plumex"]

[tool.setuptools_scm]

[tool.mitosis.steps]
data = ["plumex.data:load_centerpoints", "plumex.config:data_lookup"]
plume_points = ["plumex.video_digest:create_plumepoints", "plumex.config:data_lookup"]
regress_center = ["plumex.regression_pipeline:regress_centerline", "plumex.config:regress_lookup"]
multireg_center = ["plumex.regression_pipeline:multi_regress_centerline", "plumex.config:regress_lookup"]
sindy_fe = ["plumex.sindy_pipeline:run", "plumex.config:sindy_lookup"]
hankel_fe = ["plumex.hankel_pipeline:run", "plumex.config:hankel_lookup"]
